# pasta_website

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  MANIFEST.in  README.md  main_interface.py  pyproject.toml  requirements.txt  setup.cfg  wsgi.py
banane/: README.md
esempi/: ESEMPI.txt  bird_4.lp  bird_4_abd_prob.lp  bird_4_cond.lp  gold_map.lp
flaskr/: __init__.py  main_interface.py  schema.sql
flaskr/static/: about.html  documentation.html  examples.html
flaskr/templates/: sitoHTML.html
mele/: prova1.py  tmpFile.lp
mele/templates/: sitoHTML.html
pasta_website/: __init__.py  db.py  main_interface.py  schema.sql
pasta_website/static/: about.html  documentation.html  examples.html  website_style.css
pasta_website/templates/: sitoHTML.html
progetto/: prova1.py  tmpFile.lp
progetto/templates/: hello.html  sitoHTML.html
queries/: commands.txt  last10_prg_form.txt  last10_prg_form_ordered.txt  last10_programs.txt  last10_programs_ordered.txt
static/: examples.html
templates/: sitoHTML.html
tests/: conftest.py  data.sql  test_client.py  test_db.py  test_form.py  test_main.py
