[metadata]
name = pasta_website
version = 1.0.0
author = Thomas Martini
author_email = thomas.martini@edu.unife.it
description = website for pasta package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/damianoazzolini/pasta_website
project_urls =
    Bug Tracker = https://github.com/damianoazzolini/pasta_website/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3 License
    Operating System :: OS Independent

[options]
package_dir =
    = pasta_website
packages = find:
python_requires = >=3.7
install_requires =
    Flask>=2.2

[options.packages.find]
where=pasta_website